# fred-rdap

./: .bumpversion.cfg  .dockerignore  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .isort.cfg  .license-check-ignore  .pydocstylerc  AUTHORS  CHANGELOG.rst  ChangeLog  ChangeLog.md  ChangeLog.rst  MANIFEST.in  Makefile  README.md  README.rst  constraints.txt  dependency_links.txt  fred-rdap.spec  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.copr/: Makefile
benchmark/: profile_rdap.py  rdap_requests.py
contrib/fedora/: apache.conf  fred-rdap.spec  rdap_cfg.py  rpm-postinstall.sh  rpm-preuninstall.sh  uwsgi.ini
docker/: Dockerfile
docker/conformance/: Dockerfile  entrypoint.sh  mock_fred.py  mock_grpc.py  rdap_conformance.json  settings.py  uwsgi.ini  uwsgi_app.py
docker/ubuntu:bionic/: Dockerfile
docker/ubuntu:conformance/: Dockerfile
docker/ubuntu:xenial/: Dockerfile
docker/uwsgi/: Dockerfile  rdap_settings.py  uwsgi.ini
examples/: rdap_cfg.py
rdap/: __init__.py  apps.py  constants.py  exceptions.py  run.wsgi  settings.py  urls.py  views.py  wsgi.py
rdap/rdap_rest/: content_negotiation.py  domain.py  entity.py  exception_handler.py  keyset.py  nameserver.py  nsset.py  parser.py  rdap_utils.py  renderer.py  views.py  whois.py
rdap/tests/: __init__.py  apps.py  settings.py  test_apps.py  test_rdap_rest.py  test_rest_whois.py  test_settings.py  test_utils.py  test_utils_corba.py  test_views.py  test_whois.py
rdap/tests/data/: disclaimer.txt
rdap/utils/: corba.py  corbarecoder.py  py_logging.py
rdap_rest/: domain.py  entity.py  keyset.py  nameserver.py  nsset.py  rdap_utils.py  views.py  whois.py
settings_rdap/: apache.conf  example.py  rdap_cfg.py  rdap_disclaimer.txt
test_cfg/: settings.py
test_cfg/conformance/: mock_fred.py  rdap_conformance.json  settings.py
tests/: rdap_conformance.txt  rdap_conformance_conf.json.example
utils/: corbarecoder.py  py_logging.py
