[options]
zip_safe = False

[pydocstyle]
convention = google
add_select = D204,D400,D401
add_ignore = D1

[mypy]
check_untyped_defs = True

[mypy-appsettings.*]
ignore_missing_imports = True

[mypy-django.*]
ignore_missing_imports = True

[mypy-fred_idl.*]
ignore_missing_imports = True

[mypy-idna.*]
ignore_missing_imports = True

[mypy-omniORB.*]
ignore_missing_imports = True

[mypy-pyfco.*]
ignore_missing_imports = True

[mypy-pylogger.*]
ignore_missing_imports = True
