[options]
zip_safe = False

[pydocstyle]
convention = google
add_select = D204,D400,D401
add_ignore = D1

[flake8]
max-line-length = 120
max-complexity = 25

[isort]
line_length = 120
known_first_party = rdap
default_section = THIRDPARTY
combine_as_imports = true

[mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
