[metadata]
name = fred-rdap
version = 2.0.0-rc1
author = Vlastimil Zíma
author_email = vlastimil.zima@nic.cz
description = Fred-rdap is a Django application which provides Registration Data Access Protocol (RDAP) interface to the FRED registry system.
long_description = file: README.rst, CHANGELOG.rst
license = GPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: Name Service (DNS)
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Typing :: Typed

[options]
zip_safe = false
packages = find:
include_package_data = true
python_requires = ~=3.8
install_requires =
    django >=3.2, <4.2
    django-app-settings
    idna
    pytz
    fred-regal ~=0.8.0
    frgal ~=3.12
    grill ~=1.6

[options.extras_require]
quality =
    bandit
    doc8
    flake8
    isort
    mypy
    pydocstyle

[doc8]
max-line-length = 120
allow-long-titles = true

[flake8]
max-line-length = 120
max-complexity = 15

[isort]
line_length = 120
known_first_party = rdap
combine_as_imports = true

[pydocstyle]
convention = google
add_select = D204,D400,D401
add_ignore = D1

[mypy]
ignore_missing_imports = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[mypy-rdap.tests.*]
disallow_untyped_defs = false
